--- a/app/src/main/res/layout/activity_car_reg.xml
+++ b/app/src/main/res/layout/activity_car_reg.xml
@@ -31,37 +31,29 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp">
 
-                <AutoCompleteTextView
-                    android:id="@+id/carManufacturAutoComplete"
-                    android:layout_width="match_parent"
-                    android:textColorHint="@color/colorAccent"
-                    android:drawableLeft="@drawable/car_icon"
-                    android:drawableTint="@color/colorAccent"
-                    android:hint="Manufacturer"
-                    android:textAllCaps="true"
 
-                    android:gravity="center"
-                    android:drawableRight="@drawable/ic_arrow_drop_down"
-                    android:layout_height="wrap_content"/>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
                     android:layout_marginLeft="16dp"
                     android:layout_marginRight="16dp"
                     android:layout_marginTop="16dp"
                     android:textColorHint="@color/colorAccent"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-                    <com.google.android.material.textfield.TextInputEditText
+                    <AutoCompleteTextView
+                        android:id="@+id/carManufacturAutoComplete"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:drawableTint="@color/colorAccent"
+                        android:textColorHint="@color/colorAccent"
                         android:drawableLeft="@drawable/car_icon"
-                        android:drawableRight="@drawable/ic_arrow_drop_down"
-                        android:drawablePadding="8dp"
+                        android:drawableTint="@color/colorAccent"
                         android:padding="12dp"
-                        android:hint="Manufacturer"/>
+                        android:drawablePadding="8dp"
+                        android:hint="Manufacturer"
+                        android:textAllCaps="true"
+                        android:gravity="center"
+                        android:drawableRight="@drawable/ic_arrow_drop_down"
+                        android:layout_height="wrap_content"/>
 
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -81,7 +73,9 @@
                         android:layout_marginTop="16dp"
                         android:textColorHint="@color/colorAccent"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-                        <com.google.android.material.textfield.TextInputEditText
+
+                        <AutoCompleteTextView
+                            android:id="@+id/ed_carModel"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:drawableTint="@color/colorAccent"
@@ -103,7 +97,8 @@
                         android:layout_marginTop="16dp"
                         android:textColorHint="@color/colorAccent"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-                        <com.google.android.material.textfield.TextInputEditText
+                        <AutoCompleteTextView
+                            android:id="@+id/ed_carYear"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:drawableTint="@color/colorAccent"
