--- a/app/src/main/res/layout/activity_car_reg.xml
+++ b/app/src/main/res/layout/activity_car_reg.xml
@@ -33,6 +33,8 @@
 
 
 
+
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -42,18 +44,17 @@
                     android:textColorHint="@color/colorAccent"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                     <AutoCompleteTextView
+                        android:clickable="true"
+                        android:focusable="true"
                         android:id="@+id/carManufacturAutoComplete"
                         android:layout_width="match_parent"
-                        android:textColorHint="@color/colorAccent"
-                        android:drawableLeft="@drawable/car_icon"
+                        android:layout_height="wrap_content"
                         android:drawableTint="@color/colorAccent"
-                        android:padding="12dp"
-                        android:drawablePadding="8dp"
-                        android:hint="Manufacturer"
-                        android:textAllCaps="true"
-                        android:gravity="center"
+                        android:drawableLeft="@drawable/car_icon"
                         android:drawableRight="@drawable/ic_arrow_drop_down"
-                        android:layout_height="wrap_content"/>
+                        android:drawablePadding="8dp"
+                        android:padding="12dp"
+                        android:hint="Car Manufracture "/>
 
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -163,25 +164,31 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginLeft="16dp"
-                        android:textColor="@color/colorAccent"
-                        android:linksClickable="true"
-                        android:textColorLink="#0D47A1"
-                        android:text="AC"/>
 
-                    <CheckBox
-                        android:layout_width="wrap_content"
+                    <RadioGroup
+                        android:id="@+id/acTypeGroup"
+                        android:textSize="18sp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginTop="16dp"
                         android:layout_marginLeft="16dp"
-                        android:textColor="@color/colorAccent"
-                        android:linksClickable="true"
-                        android:textColorLink="#0D47A1"
-                        android:text="Non AC"/>
+                        android:layout_marginRight="16dp">
+
+                        <RadioButton
+                            android:id="@+id/ac_on"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/red"
+                            android:checked="true"
+                            android:text="AC"/>
+                        <RadioButton
+                            android:id="@+id/ac_off"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/red"
+                            android:text="NON-Ac"/>
+
+                    </RadioGroup>
 
                 </LinearLayout>
 
@@ -201,6 +208,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
+                    android:id="@+id/numberOFPPl"
                     android:layout_marginLeft="24dp"
                     android:layout_marginRight="16dp">
 
@@ -240,6 +248,7 @@
             </LinearLayout>
 
             <Button
+                android:id="@+id/submitBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
