--- a/app/src/main/res/layout/activity_choose_vehicle.xml
+++ b/app/src/main/res/layout/activity_choose_vehicle.xml
@@ -38,6 +38,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:foreground="?attr/selectableItemBackground"
                     android:orientation="horizontal"
                     >
 
@@ -86,6 +87,7 @@
                 app:cardBackgroundColor="@color/colorPrimary">
 
                 <LinearLayout
+                    android:foreground="?attr/selectableItemBackground"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
@@ -135,7 +137,7 @@
                 app:cardBackgroundColor="@color/colorPrimary">
 
                 <LinearLayout
-
+                    android:foreground="?attr/selectableItemBackground"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
