--- a/app/src/main/res/layout/activity_truck_reg.xml
+++ b/app/src/main/res/layout/activity_truck_reg.xml
@@ -41,6 +41,8 @@
                     android:textColorHint="@color/colorAccent"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                     <AutoCompleteTextView
+                        android:clickable="true"
+                        android:focusable="true"
                         android:id="@+id/ed_truckType"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -180,6 +182,7 @@
             </LinearLayout>
 
             <Button
+                android:id="@+id/submitBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
