--- a/app/src/main/res/layout/fragment_trip_list.xml
+++ b/app/src/main/res/layout/fragment_trip_list.xml
@@ -146,6 +146,7 @@
                 <LinearLayout
                     android:background="?attr/selectableItemBackground"
                     android:clickable="true"
+                    android:id="@+id/successfulBidList"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:weightSum="5"
